--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = breeze-gtk
 url = https://download.kde.org/stable/plasma/5.15.4/breeze-gtk-5.15.4.tar.xz
 archives = 
-giturl = 
+giturl = https://anongit.kde.org/breeze-gtk.git
 
 [autospec]
 # build 32 bit libraries
