--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = breeze-gtk
-url = https://download.kde.org/stable/plasma/5.18.2/breeze-gtk-5.18.2.tar.xz
+url = https://download.kde.org/stable/plasma/5.18.3/breeze-gtk-5.18.3.tar.xz
 archives = 
 giturl = https://anongit.kde.org/breeze-gtk.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
