update giturl to gitlab repo
Signed-off-by: Patrick McCarty <patrick.mccarty@intel.com>

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = breeze-gtk
 url = https://download.kde.org/stable/plasma/5.19.2/breeze-gtk-5.19.2.tar.xz
 archives = 
-giturl = https://anongit.kde.org/breeze-gtk.git
+giturl = https://invent.kde.org/plasma/breeze-gtk.git
 domain = 
 alias = 
 
