--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = breeze-gtk
-url = https://download.kde.org/stable/plasma/6.0.5/breeze-gtk-6.0.5.tar.xz
+url = https://download.kde.org/stable/plasma/6.1.0/breeze-gtk-6.1.0.tar.xz
 archives = 
 giturl = https://invent.kde.org/plasma/breeze-gtk.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = true
 
